examples/attribute_test/tests/compile-fail/unbalanced_if.rs
// ignore-test
#[macro_use]
extern crate observer_attribute;

#[balanced_if]
fn main() {
    if true {
}
